Replace use of deprecated URL constructor